--- a/nRF24Web/usermanagment/templates/static.html
+++ b/nRF24Web/usermanagment/templates/static.html
@@ -62,7 +62,7 @@
 </nav>
  
 <!-- Page Content -->
-<div class="container text-info pt-1">
+<div class="container pt-1">
 
    
     {% block content %} {% endblock %}
